--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   hr {
     
     border-style: none;
-    border-top: 5px dotted grey;
+    border-top: 5px dotted rgb(150, 5, 194);
     width: 5%;
   }
   h1 { 
